<resources>
    <string name="app_name">Sound Tweet</string>

    <!--Common-->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <!--Navigation-->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="post_tweet">Post Tweet</string>
    <string name="edit_profile">Edit profile</string>
    <string name="press_once_more_to_exit">Press once more to exit</string>

    <!--Auth-->
    <string name="fill_this_data_to_get_started">Fill this data to get started.</string>
    <string name="already_have_an_account">Already have an account? Click here to login</string>
    <string name="already_have_an_account_highlighted">Click here to login</string>
    <string name="welcome_back_please_enter_your_credential">Welcome back! Please enter your credential</string>
    <string name="email">Email</string>
    <string name="email_error">Wrong email format</string>
    <string name="name">Name</string>
    <string name="name_error">Username must be more than 4 character</string>
    <string name="username">Username</string>
    <string name="username_error">Username can\'t be empty</string>
    <string name="password">Password</string>
    <string name="password_error">Password can\'t be empty</string>
    <string name="do_not_have_an_account_yet">Don\'t have an account yet? Register now</string>
    <string name="do_not_have_an_account_yet_highlighted">Register now</string>

    <!--Home-->
    <string name="empty_home">Home is empty</string>
    <string name="empty_home_caption">Please start follow another user then see their post here!</string>

    <!--Tweet-->
    <string name="empty_tweet">Tweet is empty</string>
    <string name="empty_tweet_caption">Please post a tweet then see your post here!</string>
    <string name="user_post_list_format">%1s %2s ·%3s</string>
    <string name="post_like_format">%1s Like</string>
    <string name="post_likes_format">%1s Likes</string>
    <string name="detail_tweet">Detail Tweet</string>
    <string name="failed_to_transcribe_speech">Failed to transcribe text</string>
    <string name="post">Post</string>
    <string name="insert_a_caption">Insert a caption</string>
    <string name="press_this_button_to_start_recording">Press this button to start recording &#9654;</string>
    <string name="recording">Recording…</string>
    <string name="record">Record</string>
    <string name="paused">Paused.</string>
    <string name="pause">Pause</string>
    <string name="tweet_posted_successfully">Tweet posted successfully</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="cancel_post_tweet_rationale">Cancel posting tweet?</string>
    <string name="cancel_post_tweet_rationale_caption">The data that you\'ve input will be deleted.</string>
    <string name="edit_caption">Edit caption</string>
    <string name="tweet_menu">Tweet\'s menu</string>
    <string name="tweet_caption_edited">Tweet\'s caption edited</string>
    <string name="empty_reply">Reply is empty</string>
    <string name="empty_reply_caption">Please post a comment then see your post here!</string>
    <string name="see_audio_as_text">See audio as text</string>
    <string name="audio_as_text_failed">The post\'s audio is failed to be transcribe as text</string>

    <!--Search-->
    <string name="empty_user">No User Found</string>
    <string name="empty_user_caption">It seems like there’s the user your searched is not in our system</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="search_user">Search user</string>
    <string name="empty_search_query">Search query is empty</string>
    <string name="empty_search_query_caption">Please enter text on the input above to show suggested user</string>

    <!--Notification-->
    <string name="notifications">Notifications</string>
    <string name="empty_notification">Notification is empty</string>
    <string name="empty_notification_caption">Please start interacting to get notification!</string>
    <string name="notification_text_format">
        In case you missed %1s’s post a Voice with caption:
        \n%2s
    </string>

    <!--Profile-->
    <string name="logout">Logout</string>
    <string name="joined_date_format">Joined %1s</string>
    <string name="following_format">%1s Following</string>
    <string name="follower_format">%1s Follower</string>
    <string name="followers_format">%1s Followers</string>
    <string name="logout_rationale">Do want to logout?</string>
    <string name="logout_rationale_caption">You will be redirected to login page after logout.</string>
    <string name="bio">Bio</string>
    <string name="bio_error">Bio can\'t be empty</string>
    <string name="profile_edited_successfully">Profile edited successfully</string>
    <string name="cancel_edit_profile_rationale">Cancel edit profile?</string>
    <string name="cancel_edit_profile_rationale_caption">The data that you\'ve changed will be deleted.</string>
    <string name="edit_profile_assurance">You sure want to change?</string>
    <string name="edit_profile_assurance_caption">The data that you\'ve changed will be saved and can\'t be reverse.</string>

</resources>