<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/homeNavigation">

    <fragment
        android:id="@+id/homeNavigation"
        android:name="id.hizari.soundtweet.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchNavigation"
        android:name="id.hizari.soundtweet.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/notificationNavigation"
        android:name="id.hizari.soundtweet.ui.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/profileNavigation"
        android:name="id.hizari.soundtweet.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>