<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardNavigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="id.hizari.soundtweet.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_tweetDetailFragment"
            app:destination="@id/tweetDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="id.hizari.soundtweet.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_searchFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />

    </fragment>

    <fragment
        android:id="@+id/notificationFragment"
        android:name="id.hizari.soundtweet.ui.notification.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="id.hizari.soundtweet.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profileFragment_to_tweetDetailFragment"
            app:destination="@id/tweetDetailFragment" />

        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />

    </fragment>

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="id.hizari.soundtweet.ui.profile.UserProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile">

        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="id.hizari.domain.model.User"
            app:nullable="true" />

        <action
            android:id="@+id/action_userProfileFragment_to_tweetDetailFragment"
            app:destination="@id/tweetDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/postTweetFragment"
        android:name="id.hizari.soundtweet.ui.tweet.PostTweetFragment"
        android:label="@string/post_tweet"
        tools:layout="@layout/fragment_post_tweet">

        <argument
            android:name="tweetId"
            android:defaultValue="-1L"
            app:argType="long" />

    </fragment>

    <fragment
        android:id="@+id/tweetDetailFragment"
        android:name="id.hizari.soundtweet.ui.tweet.TweetDetailFragment"
        android:label="@string/post_tweet"
        tools:layout="@layout/fragment_tweet_detail">

        <argument
            android:name="tweet"
            app:argType="id.hizari.domain.model.Tweet"
            app:nullable="true" />

        <action
            android:id="@+id/action_tweetDetailFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />

        <action
            android:id="@+id/action_tweetDetailFragment_to_postTweetFragment"
            app:destination="@id/postTweetFragment" />

        <action
            android:id="@+id/action_tweetDetailFragment_to_tweetDetailFragment"
            app:destination="@id/tweetDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="id.hizari.soundtweet.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>