<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="id.hizari.soundtweet.ui.tweet.EditCaptionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvCloser"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/pale_sky"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <TextView
            android:id="@+id/tvEditCaption"
            style="@style/TextPrimaryExtraLargeBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/edit_caption"
            app:layout_constraintBottom_toBottomOf="@id/btnSave"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnSave" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/ButtonFillThin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:enabled="@{!viewModel.caption.isEmpty}"
            android:onClick="@{viewModel::onClickSave}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mcvCloser" />

        <EditText
            android:id="@+id/etCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/insert_a_caption"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="10"
            android:text="@={viewModel.caption}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEditCaption" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>